// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Download page renders correctly 1`] = `
<div>
  <div
    class="layout-container"
  >
    <nav
      aria-label="Primary"
      class="nav"
    >
      <div
        class="navContainer"
      >
        <div
          class="navStartwrapper"
        >
          <a
            aria-label="Homepage"
            href="/"
          >
            <div
              class="logo"
            >
              <svg
                class="navLogo light-mode-only"
              />
              <svg
                class="navLogo dark-mode-only"
              />
            </div>
          </a>
        </div>
        <ul
          class="navTabsContainer"
        >
          <li
            class="navTabs"
          >
            <a
              href="/learn"
            >
              Learn
            </a>
          </li>
          <li
            class="navTabs"
          >
            <a
              href="https://nodejs.org/en/docs/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Documentation
            </a>
          </li>
          <li
            class="navTabs"
          >
            <a
              href="/download"
            >
              Download
            </a>
          </li>
          <li
            class="navTabs"
          >
            <a
              href="/community"
            >
              Community
            </a>
          </li>
        </ul>
        <div
          class="navEndwrapper"
        >
          <ul
            class="rightContainer"
          >
            <li
              class="navTabs searchBar"
            >
              <span
                class="sr-only"
              >
                Search Bar
              </span>
              <div
                class="searchBarContainer"
                style="min-height: 0em; width: 100%; max-width: 7em; box-shadow: none;"
              >
                <div
                  class="searchInputContainer"
                  role="presentation"
                >
                  <i
                    class="material-icons searchIcon"
                  >
                    travel_explore
                  </i>
                  <label
                    for="searchInput"
                  >
                    <span>
                      Search
                    </span>
                    <input
                      autocomplete="off"
                      class="inputText"
                      id="searchInput"
                      name="query"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
              </div>
            </li>
            <li
              class="navTabs"
            >
              <button
                class="darkModeToggle"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Toggle Dark Mode
                </span>
                <i
                  class="material-icons light-mode-only"
                >
                  mode_night
                </i>
                <i
                  class="material-icons dark-mode-only"
                >
                  brightness_medium
                </i>
              </button>
            </li>
            <li
              class="navTabs"
            >
              <a
                href="https://github.com/nodejs/nodejs.dev"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="sr-only"
                >
                  GitHub
                </span>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-github "
                  color="var(--color-text-accent)"
                  data-icon="github"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  style="padding: 1rem; width: 2rem; height: 2rem;"
                  viewBox="0 0 496 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <span
      class="home-page -download"
    >
      <div
        class="downloadPageNavigation"
      >
        <div>
          HOME /
           
          <span
            class="downloadPageNavigationActive"
          >
            downloads
          </span>
        </div>
        <div>
          LATEST LTS VERSION mock-version-1
        </div>
      </div>
      <div
        class="downloadPageNavigation"
      >
        <div
          class="downloadPageNavigationTitle"
        >
          Downloads
        </div>
        <div
          class="downloadPageNavigationNpm"
        >
          (includes npm mock-npm)
        </div>
      </div>
      <p
        class="release-description"
      >
        Download the Node.js source code, a pre-built installer for your platform, or install via a
         
        <a
          href="/download/package-manager"
        >
          package manager
        </a>
        .
      </p>
      <div
        class="downloadToogle"
      >
        <div
          class="downloadToogleSelector"
        >
          <div
            class="downloadToogleSwitch"
          >
            <button
              aria-checked="true"
              aria-label="Show LTS versions"
              class="active"
              role="switch"
              type="button"
            >
              LTS
            </button>
            <button
              aria-checked="true"
              aria-label="Show LTS versions"
              class="current"
              role="switch"
              type="button"
            >
              Current
            </button>
          </div>
        </div>
        <p
          class="downloadToogleDescription"
        >
          Recommended for most users
        </p>
      </div>
      <div
        class="downloadCardsWrapper"
        data-rttabs="true"
        tabindex="-1"
      >
        <ul
          class="downloadCards"
          role="tablist"
        >
          <li
            aria-controls="paneldownload-card-WIN"
            aria-disabled="false"
            aria-selected="false"
            class="downloadCard"
            data-rttab="true"
            id="tabdownload-card-WIN"
            role="tab"
            tabindex="0"
          >
            <div
              class="downloadCardTop"
            >
              <svg
                class="downloadCardImage"
              />
            </div>
            <p
              class="downloadCardLabel"
            >
              Windows Installer
            </p>
            <p
              class="downloadCardFilename"
            >
              node-mock-version-1-x86.msi
            </p>
          </li>
          <li
            aria-controls="paneldownload-card-MAC"
            aria-disabled="false"
            aria-selected="false"
            class="downloadCard"
            data-rttab="true"
            id="tabdownload-card-MAC"
            role="tab"
            tabindex="0"
          >
            <div
              class="downloadCardTop"
            >
              <svg
                class="downloadCardImage"
              />
            </div>
            <p
              class="downloadCardLabel"
            >
              MAC Installer
            </p>
            <p
              class="downloadCardFilename"
            >
              node-mock-version-1.pkg
            </p>
          </li>
          <li
            aria-controls="paneldownload-card-SOURCECODE"
            aria-disabled="false"
            aria-selected="false"
            class="downloadCard downloadCardActive"
            data-rttab="true"
            id="tabdownload-card-SOURCECODE"
            role="tab"
            tabindex="0"
          >
            <div
              class="downloadCardTop"
            >
              <svg
                class="downloadCardImage"
              />
              <a
                class="downloadCardLink"
                href="https://nodejs.org/dist/mock-version-1/node-mock-version-1.tar.gz"
              >
                <i
                  class="material-icons"
                >
                  get_app
                </i>
              </a>
            </div>
            <p
              class="downloadCardLabel"
            >
              Source Code
            </p>
            <p
              class="downloadCardFilename"
            >
              node-mock-version-1.tar.gz
            </p>
          </li>
        </ul>
      </div>
      <div
        class="downloadReleases"
      >
        <h2
          class="downloadReleasesTitle"
        >
          Upcoming Releases
        </h2>
        <div
          class="upcoming-releases"
        >
          <div
            class="react-tabs"
            data-rttabs="true"
          >
            <ul
              class="react-tabs__tab-list"
              role="tablist"
            >
              <li
                aria-controls="panel:r1:0"
                aria-disabled="false"
                aria-selected="true"
                class="react-tabs__tab react-tabs__tab--selected"
                data-rttab="true"
                id="tab:r1:0"
                role="tab"
                tabindex="0"
              >
                Node.js 
                v12
              </li>
              <li
                aria-controls="panel:r1:1"
                aria-disabled="false"
                aria-selected="false"
                class="react-tabs__tab"
                data-rttab="true"
                id="tab:r1:1"
                role="tab"
              >
                Node.js 
                v14
              </li>
            </ul>
            <div
              aria-labelledby="tab:r1:0"
              class="react-tabs__tab-panel react-tabs__tab-panel--selected"
              id="panel:r1:0"
              role="tabpanel"
            >
              <div
                class="upcoming-releases__panel"
              >
                <div
                  class="upcoming-releases__item--Current"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    Current
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2019-04-23
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--LTS"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    LTS
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2019-10-21
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--Maintenance"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    Maintenance
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2020-11-30
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--End-of-life"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    End-of-life
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2022-04-30
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab:r1:1"
              class="react-tabs__tab-panel"
              id="panel:r1:1"
              role="tabpanel"
            />
          </div>
        </div>
        <p>
          Major Node.js versions enter Current release status for six months, which gives library authors time to add support for them. After six months, odd-numbered releases (9, 11, etc.) become unsupported, and even-numbered releases (10, 12, etc.) move to Active LTS status and are ready for general use. LTS release status is "long-term support", which typically guarantees that critical bugs will be fixed for a total of 30 months. Production applications should only use Active LTS or Maintenance LTS releases.
        </p>
        <div
          class="downloadsTableContainer"
        >
          <table>
            <thead>
              <tr>
                <th>
                  Release
                </th>
                <th>
                  Status
                </th>
                <th>
                  Codename
                </th>
                <th>
                  Initial Release
                </th>
                <th>
                  Active LTS Start
                </th>
                <th>
                  Maintenance LTS Start
                </th>
                <th>
                  End of Life
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-v12.x/"
                  >
                    v12
                  </a>
                </td>
                <td>
                  Maintenance LTS
                </td>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-erbium/"
                  >
                    Erbium
                  </a>
                </td>
                <td>
                  2019-04-23
                </td>
                <td>
                  2019-10-21
                </td>
                <td>
                  2020-11-30
                </td>
                <td>
                  2022-04-30
                </td>
              </tr>
              <tr>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-v14.x/"
                  >
                    v14
                  </a>
                </td>
                <td>
                  Active LTS
                </td>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-fermium/"
                  >
                    Fermium
                  </a>
                </td>
                <td>
                  2020-04-21
                </td>
                <td>
                  2020-10-27
                </td>
                <td>
                  2021-10-19
                </td>
                <td>
                  2023-04-30
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="downloadAdditional"
      >
        <div
          class="downloadAdditionalHeader"
        >
          <h3
            class="downloadAdditionalTitle"
          >
            Additional Downloads
          </h3>
          <div
            class="downloadToogle"
          >
            <div
              class="downloadToogleSelector"
            >
              <div
                class="downloadToogleSwitch"
              >
                <button
                  aria-checked="true"
                  aria-label="Show LTS versions"
                  class="active"
                  role="switch"
                  type="button"
                >
                  LTS
                </button>
                <button
                  aria-checked="true"
                  aria-label="Show LTS versions"
                  class="current"
                  role="switch"
                  type="button"
                >
                  Current
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="downloadAdditionalBody"
        >
          <div
            class="downloadableItem"
            role="button"
            tabindex="0"
          >
            <div
              class="downloadableItemHeader"
            >
              <div
                class="downloadableItemHeaderArrow"
              >
                <div
                  class="downloadableItemHeaderArrowRight"
                />
              </div>
              Windows Installer (.msi)
            </div>
          </div>
          <div
            class="downloadableItem"
            role="button"
            tabindex="0"
          >
            <div
              class="downloadableItemHeader"
            >
              <div
                class="downloadableItemHeaderArrow"
              >
                <div
                  class="downloadableItemHeaderArrowRight"
                />
              </div>
              Windows Binary (.zip)
            </div>
          </div>
          <div
            class="downloadableItem"
            role="button"
            tabindex="0"
          >
            <div
              class="downloadableItemHeader"
            >
              <div
                class="downloadableItemHeaderArrow"
              >
                <div
                  class="downloadableItemHeaderArrowRight"
                />
              </div>
              macOS Installer (.pkg)
            </div>
          </div>
          <div
            class="downloadableItem"
            role="button"
            tabindex="0"
          >
            <div
              class="downloadableItemHeader"
            >
              <div
                class="downloadableItemHeaderArrow"
              >
                <div
                  class="downloadableItemHeaderArrowRight"
                />
              </div>
              macOS Binary (.tar.gz)
            </div>
          </div>
          <div
            class="downloadableItem"
            role="button"
            tabindex="0"
          >
            <div
              class="downloadableItemHeader"
            >
              <div
                class="downloadableItemHeaderArrow"
              >
                <div
                  class="downloadableItemHeaderArrowRight"
                />
              </div>
              Linux (PPC, S390x, AIX, ARMv7, ARMv8)
            </div>
          </div>
        </div>
      </div>
    </span>
    <footer
      class="footer"
    >
      <ul
        class="footerLeft"
      >
        <li>
          <a
            aria-label="Node.js Slack Link"
            class="footerLink"
            href="https://trademark-policy.openjsf.org/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="/about/privacy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="https://github.com/openjs-foundation/cross-project-council/blob/main/CODE_OF_CONDUCT.md#contributor-covenant-code-of-conduct"
          >
            Code of Conduct
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="/about/security"
          >
            Security Reporting
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="/about"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="/blog"
          >
            Blog
          </a>
        </li>
      </ul>
      <ul
        class="footerRight"
      >
        <li>
          © OpenJS Foundation
        </li>
        <li>
          <a
            aria-label="Node.js Github Page Link"
            href="https://github.com/nodejs/node"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              GitHub
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-github "
              color="var(--color-text-secondary)"
              data-icon="github"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 496 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                fill="currentColor"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Twitter Link"
            href="https://twitter.com/nodejs"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-twitter "
              color="var(--color-text-secondary)"
              data-icon="twitter"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M459.4 151.7c.325 4.548 .325 9.097 .325 13.65 0 138.7-105.6 298.6-298.6 298.6-59.45 0-114.7-17.22-161.1-47.11 8.447 .974 16.57 1.299 25.34 1.299 49.06 0 94.21-16.57 130.3-44.83-46.13-.975-84.79-31.19-98.11-72.77 6.498 .974 12.99 1.624 19.82 1.624 9.421 0 18.84-1.3 27.61-3.573-48.08-9.747-84.14-51.98-84.14-102.1v-1.299c13.97 7.797 30.21 12.67 47.43 13.32-28.26-18.84-46.78-51.01-46.78-87.39 0-19.49 5.197-37.36 14.29-52.95 51.65 63.67 129.3 105.3 216.4 109.8-1.624-7.797-2.599-15.92-2.599-24.04 0-57.83 46.78-104.9 104.9-104.9 30.21 0 57.5 12.67 76.67 33.14 23.72-4.548 46.46-13.32 66.6-25.34-7.798 24.37-24.37 44.83-46.13 57.83 21.12-2.273 41.58-8.122 60.43-16.24-14.29 20.79-32.16 39.31-52.63 54.25z"
                fill="currentColor"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Slack Link"
            href="https://slack.openjsf.org"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-slack "
              color="var(--color-text-secondary)"
              data-icon="slack"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M94.12 315.1c0 25.9-21.16 47.06-47.06 47.06S0 341 0 315.1c0-25.9 21.16-47.06 47.06-47.06h47.06v47.06zm23.72 0c0-25.9 21.16-47.06 47.06-47.06s47.06 21.16 47.06 47.06v117.8c0 25.9-21.16 47.06-47.06 47.06s-47.06-21.16-47.06-47.06V315.1zm47.06-188.1c-25.9 0-47.06-21.16-47.06-47.06S139 32 164.9 32s47.06 21.16 47.06 47.06v47.06H164.9zm0 23.72c25.9 0 47.06 21.16 47.06 47.06s-21.16 47.06-47.06 47.06H47.06C21.16 243.1 0 222.8 0 196.9s21.16-47.06 47.06-47.06H164.9zm188.1 47.06c0-25.9 21.16-47.06 47.06-47.06 25.9 0 47.06 21.16 47.06 47.06s-21.16 47.06-47.06 47.06h-47.06V196.9zm-23.72 0c0 25.9-21.16 47.06-47.06 47.06-25.9 0-47.06-21.16-47.06-47.06V79.06c0-25.9 21.16-47.06 47.06-47.06 25.9 0 47.06 21.16 47.06 47.06V196.9zM283.1 385.9c25.9 0 47.06 21.16 47.06 47.06 0 25.9-21.16 47.06-47.06 47.06-25.9 0-47.06-21.16-47.06-47.06v-47.06h47.06zm0-23.72c-25.9 0-47.06-21.16-47.06-47.06 0-25.9 21.16-47.06 47.06-47.06h117.8c25.9 0 47.06 21.16 47.06 47.06 0 25.9-21.16 47.06-47.06 47.06H283.1z"
                fill="currentColor"
              />
            </svg>
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`Download page should handle LTS to Current switch 1`] = `
<div>
  <div
    class="layout-container"
  >
    <nav
      aria-label="Primary"
      class="nav"
    >
      <div
        class="navContainer"
      >
        <div
          class="navStartwrapper"
        >
          <a
            aria-label="Homepage"
            href="/"
          >
            <div
              class="logo"
            >
              <svg
                class="navLogo light-mode-only"
              />
              <svg
                class="navLogo dark-mode-only"
              />
            </div>
          </a>
        </div>
        <ul
          class="navTabsContainer"
        >
          <li
            class="navTabs"
          >
            <a
              href="/learn"
            >
              Learn
            </a>
          </li>
          <li
            class="navTabs"
          >
            <a
              href="https://nodejs.org/en/docs/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Documentation
            </a>
          </li>
          <li
            class="navTabs"
          >
            <a
              href="/download"
            >
              Download
            </a>
          </li>
          <li
            class="navTabs"
          >
            <a
              href="/community"
            >
              Community
            </a>
          </li>
        </ul>
        <div
          class="navEndwrapper"
        >
          <ul
            class="rightContainer"
          >
            <li
              class="navTabs searchBar"
            >
              <span
                class="sr-only"
              >
                Search Bar
              </span>
              <div
                class="searchBarContainer"
                style="min-height: 0em; width: 100%; max-width: 7em; box-shadow: none;"
              >
                <div
                  class="searchInputContainer"
                  role="presentation"
                >
                  <i
                    class="material-icons searchIcon"
                  >
                    travel_explore
                  </i>
                  <label
                    for="searchInput"
                  >
                    <span>
                      Search
                    </span>
                    <input
                      autocomplete="off"
                      class="inputText"
                      id="searchInput"
                      name="query"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
              </div>
            </li>
            <li
              class="navTabs"
            >
              <button
                class="darkModeToggle"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Toggle Dark Mode
                </span>
                <i
                  class="material-icons light-mode-only"
                >
                  mode_night
                </i>
                <i
                  class="material-icons dark-mode-only"
                >
                  brightness_medium
                </i>
              </button>
            </li>
            <li
              class="navTabs"
            >
              <a
                href="https://github.com/nodejs/nodejs.dev"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="sr-only"
                >
                  GitHub
                </span>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-github "
                  color="var(--color-text-accent)"
                  data-icon="github"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  style="padding: 1rem; width: 2rem; height: 2rem;"
                  viewBox="0 0 496 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <span
      class="home-page -download"
    >
      <div
        class="downloadPageNavigation"
      >
        <div>
          HOME /
           
          <span
            class="downloadPageNavigationActive"
          >
            downloads
          </span>
        </div>
        <div>
          CURRENT VERSION 
        </div>
      </div>
      <div
        class="downloadPageNavigation"
      >
        <div
          class="downloadPageNavigationTitle"
        >
          Downloads
        </div>
        <div
          class="downloadPageNavigationNpm"
        >
          (includes npm )
        </div>
      </div>
      <p
        class="release-description"
      >
        Download the Node.js source code, a pre-built installer for your platform, or install via a
         
        <a
          href="/download/package-manager"
        >
          package manager
        </a>
        .
      </p>
      <div
        class="downloadToogle"
      >
        <div
          class="downloadToogleSelector"
        >
          <div
            class="downloadToogleSwitch"
          >
            <button
              aria-checked="false"
              aria-label="Show LTS versions"
              class=""
              role="switch"
              type="button"
            >
              LTS
            </button>
            <button
              aria-checked="false"
              aria-label="Show LTS versions"
              class="current active"
              role="switch"
              type="button"
            >
              Current
            </button>
          </div>
        </div>
        <p
          class="downloadToogleDescription"
        >
          With the latest features
        </p>
      </div>
      <div
        class="downloadCardsWrapper"
        data-rttabs="true"
        tabindex="-1"
      >
        <ul
          class="downloadCards"
          role="tablist"
        >
          <li
            aria-controls="paneldownload-card-WIN"
            aria-disabled="false"
            aria-selected="false"
            class="downloadCard"
            data-rttab="true"
            id="tabdownload-card-WIN"
            role="tab"
            tabindex="0"
          >
            <div
              class="downloadCardTop"
            >
              <svg
                class="downloadCardImage"
              />
            </div>
            <p
              class="downloadCardLabel"
            >
              Windows Installer
            </p>
            <p
              class="downloadCardFilename"
            >
              node-undefined-x86.msi
            </p>
          </li>
          <li
            aria-controls="paneldownload-card-MAC"
            aria-disabled="false"
            aria-selected="false"
            class="downloadCard"
            data-rttab="true"
            id="tabdownload-card-MAC"
            role="tab"
            tabindex="0"
          >
            <div
              class="downloadCardTop"
            >
              <svg
                class="downloadCardImage"
              />
            </div>
            <p
              class="downloadCardLabel"
            >
              MAC Installer
            </p>
            <p
              class="downloadCardFilename"
            >
              node-undefined.pkg
            </p>
          </li>
          <li
            aria-controls="paneldownload-card-SOURCECODE"
            aria-disabled="false"
            aria-selected="false"
            class="downloadCard downloadCardActive"
            data-rttab="true"
            id="tabdownload-card-SOURCECODE"
            role="tab"
            tabindex="0"
          >
            <div
              class="downloadCardTop"
            >
              <svg
                class="downloadCardImage"
              />
              <a
                class="downloadCardLink"
                href="https://nodejs.org/dist/undefined/node-undefined.tar.gz"
              >
                <i
                  class="material-icons"
                >
                  get_app
                </i>
              </a>
            </div>
            <p
              class="downloadCardLabel"
            >
              Source Code
            </p>
            <p
              class="downloadCardFilename"
            >
              node-undefined.tar.gz
            </p>
          </li>
        </ul>
      </div>
      <div
        class="downloadReleases"
      >
        <h2
          class="downloadReleasesTitle"
        >
          Upcoming Releases
        </h2>
        <div
          class="upcoming-releases"
        >
          <div
            class="react-tabs"
            data-rttabs="true"
          >
            <ul
              class="react-tabs__tab-list"
              role="tablist"
            >
              <li
                aria-controls="panel:r3:0"
                aria-disabled="false"
                aria-selected="true"
                class="react-tabs__tab react-tabs__tab--selected"
                data-rttab="true"
                id="tab:r3:0"
                role="tab"
                tabindex="0"
              >
                Node.js 
                v12
              </li>
              <li
                aria-controls="panel:r3:1"
                aria-disabled="false"
                aria-selected="false"
                class="react-tabs__tab"
                data-rttab="true"
                id="tab:r3:1"
                role="tab"
              >
                Node.js 
                v14
              </li>
            </ul>
            <div
              aria-labelledby="tab:r3:0"
              class="react-tabs__tab-panel react-tabs__tab-panel--selected"
              id="panel:r3:0"
              role="tabpanel"
            >
              <div
                class="upcoming-releases__panel"
              >
                <div
                  class="upcoming-releases__item--Current"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    Current
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2019-04-23
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--LTS"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    LTS
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2019-10-21
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--Maintenance"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    Maintenance
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2020-11-30
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--End-of-life"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    End-of-life
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2022-04-30
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab:r3:1"
              class="react-tabs__tab-panel"
              id="panel:r3:1"
              role="tabpanel"
            />
          </div>
        </div>
        <p>
          Major Node.js versions enter Current release status for six months, which gives library authors time to add support for them. After six months, odd-numbered releases (9, 11, etc.) become unsupported, and even-numbered releases (10, 12, etc.) move to Active LTS status and are ready for general use. LTS release status is "long-term support", which typically guarantees that critical bugs will be fixed for a total of 30 months. Production applications should only use Active LTS or Maintenance LTS releases.
        </p>
        <div
          class="downloadsTableContainer"
        >
          <table>
            <thead>
              <tr>
                <th>
                  Release
                </th>
                <th>
                  Status
                </th>
                <th>
                  Codename
                </th>
                <th>
                  Initial Release
                </th>
                <th>
                  Active LTS Start
                </th>
                <th>
                  Maintenance LTS Start
                </th>
                <th>
                  End of Life
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-v12.x/"
                  >
                    v12
                  </a>
                </td>
                <td>
                  Maintenance LTS
                </td>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-erbium/"
                  >
                    Erbium
                  </a>
                </td>
                <td>
                  2019-04-23
                </td>
                <td>
                  2019-10-21
                </td>
                <td>
                  2020-11-30
                </td>
                <td>
                  2022-04-30
                </td>
              </tr>
              <tr>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-v14.x/"
                  >
                    v14
                  </a>
                </td>
                <td>
                  Active LTS
                </td>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-fermium/"
                  >
                    Fermium
                  </a>
                </td>
                <td>
                  2020-04-21
                </td>
                <td>
                  2020-10-27
                </td>
                <td>
                  2021-10-19
                </td>
                <td>
                  2023-04-30
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="downloadAdditional"
      >
        <div
          class="downloadAdditionalHeader"
        >
          <h3
            class="downloadAdditionalTitle"
          >
            Additional Downloads
          </h3>
          <div
            class="downloadToogle"
          >
            <div
              class="downloadToogleSelector"
            >
              <div
                class="downloadToogleSwitch"
              >
                <button
                  aria-checked="false"
                  aria-label="Show LTS versions"
                  class=""
                  role="switch"
                  type="button"
                >
                  LTS
                </button>
                <button
                  aria-checked="false"
                  aria-label="Show LTS versions"
                  class="current active"
                  role="switch"
                  type="button"
                >
                  Current
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="downloadAdditionalBody"
        />
      </div>
    </span>
    <footer
      class="footer"
    >
      <ul
        class="footerLeft"
      >
        <li>
          <a
            aria-label="Node.js Slack Link"
            class="footerLink"
            href="https://trademark-policy.openjsf.org/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="/about/privacy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="https://github.com/openjs-foundation/cross-project-council/blob/main/CODE_OF_CONDUCT.md#contributor-covenant-code-of-conduct"
          >
            Code of Conduct
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="/about/security"
          >
            Security Reporting
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="/about"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="footerLink"
            href="/blog"
          >
            Blog
          </a>
        </li>
      </ul>
      <ul
        class="footerRight"
      >
        <li>
          © OpenJS Foundation
        </li>
        <li>
          <a
            aria-label="Node.js Github Page Link"
            href="https://github.com/nodejs/node"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              GitHub
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-github "
              color="var(--color-text-secondary)"
              data-icon="github"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 496 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                fill="currentColor"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Twitter Link"
            href="https://twitter.com/nodejs"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-twitter "
              color="var(--color-text-secondary)"
              data-icon="twitter"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M459.4 151.7c.325 4.548 .325 9.097 .325 13.65 0 138.7-105.6 298.6-298.6 298.6-59.45 0-114.7-17.22-161.1-47.11 8.447 .974 16.57 1.299 25.34 1.299 49.06 0 94.21-16.57 130.3-44.83-46.13-.975-84.79-31.19-98.11-72.77 6.498 .974 12.99 1.624 19.82 1.624 9.421 0 18.84-1.3 27.61-3.573-48.08-9.747-84.14-51.98-84.14-102.1v-1.299c13.97 7.797 30.21 12.67 47.43 13.32-28.26-18.84-46.78-51.01-46.78-87.39 0-19.49 5.197-37.36 14.29-52.95 51.65 63.67 129.3 105.3 216.4 109.8-1.624-7.797-2.599-15.92-2.599-24.04 0-57.83 46.78-104.9 104.9-104.9 30.21 0 57.5 12.67 76.67 33.14 23.72-4.548 46.46-13.32 66.6-25.34-7.798 24.37-24.37 44.83-46.13 57.83 21.12-2.273 41.58-8.122 60.43-16.24-14.29 20.79-32.16 39.31-52.63 54.25z"
                fill="currentColor"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Slack Link"
            href="https://slack.openjsf.org"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-slack "
              color="var(--color-text-secondary)"
              data-icon="slack"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M94.12 315.1c0 25.9-21.16 47.06-47.06 47.06S0 341 0 315.1c0-25.9 21.16-47.06 47.06-47.06h47.06v47.06zm23.72 0c0-25.9 21.16-47.06 47.06-47.06s47.06 21.16 47.06 47.06v117.8c0 25.9-21.16 47.06-47.06 47.06s-47.06-21.16-47.06-47.06V315.1zm47.06-188.1c-25.9 0-47.06-21.16-47.06-47.06S139 32 164.9 32s47.06 21.16 47.06 47.06v47.06H164.9zm0 23.72c25.9 0 47.06 21.16 47.06 47.06s-21.16 47.06-47.06 47.06H47.06C21.16 243.1 0 222.8 0 196.9s21.16-47.06 47.06-47.06H164.9zm188.1 47.06c0-25.9 21.16-47.06 47.06-47.06 25.9 0 47.06 21.16 47.06 47.06s-21.16 47.06-47.06 47.06h-47.06V196.9zm-23.72 0c0 25.9-21.16 47.06-47.06 47.06-25.9 0-47.06-21.16-47.06-47.06V79.06c0-25.9 21.16-47.06 47.06-47.06 25.9 0 47.06 21.16 47.06 47.06V196.9zM283.1 385.9c25.9 0 47.06 21.16 47.06 47.06 0 25.9-21.16 47.06-47.06 47.06-25.9 0-47.06-21.16-47.06-47.06v-47.06h47.06zm0-23.72c-25.9 0-47.06-21.16-47.06-47.06 0-25.9 21.16-47.06 47.06-47.06h117.8c25.9 0 47.06 21.16 47.06 47.06 0 25.9-21.16 47.06-47.06 47.06H283.1z"
                fill="currentColor"
              />
            </svg>
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;
